request and login

--- a/index.html
+++ b/index.html
@@ -1,13 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-hans">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <style>
+        .box {
+          position: fixed;
+          left: 50%;
+          top: 50%;
+          transform: translate(-50%, -50%);
+          font-size: 26px;
+        }
+        .loading {
+          --circle-width: 20px;
+          --color: #00aff2;
+          --gap: 10px;
+          display: flex;
+          flex-wrap: wrap;
+          margin: auto;
+          margin-bottom: 20px;
+          width: calc(var(--circle-width) * 2 + var(--gap));
+          gap: var(--gap);
+          animation: loading 1.2s linear infinite;
+        }
+        .loading > div {
+          width: var(--circle-width);
+          height: var(--circle-width);
+          background: var(--color);
+          border-radius: 50%;
+        }
+
+        .loading > div:last-child {
+          opacity: 0.6;
+        }
+        @keyframes loading {
+          0% {
+            transform: rotate(0deg);
+          }
+          100% {
+            transform: rotate(360deg);
+          }
+        }
+      </style>
+
+      <div class="box">
+        <div class="loading">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+        <p>Admin System</p>
+      </div>
+    </div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
